edit project files

--- a/appproject.html
+++ b/appproject.html
@@ -1,71 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
 <head>
-  <meta charset="UTF-8">
-  <title>Nongwaeng Salon | Mobile App Case Study</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Nongwaeng Salon | UX/UI Case Study</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
 
-<section class="case-hero">
-  <h1>Nongwaeng Salon</h1>
-  <p>Appointment Booking · Mobile Application</p>
-</section>
+  <!-- HERO -->
+  <section class="hero">
+    <h1>Nongwaeng Salon Appointment Booking</h1>
+    <p>UX/UI Case Study · Mobile Application</p>
+    <p>บทบาท: UX/UI Designer · เครื่องมือ: Figma</p>
+  </section>
 
-<section class="case-content">
+  <!-- OVERVIEW -->
+  <section class="about">
+    <h2>ภาพรวมโปรเจค</h2>
+    <p>
+      Nongwaeng Salon เป็นแอปพลิเคชันสำหรับจองคิวร้านทำผม
+      ที่ออกแบบมาเพื่อแก้ปัญหาการจองผ่านแชท
+      และช่วยให้ผู้ใช้เลือกวันเวลาได้อย่างสะดวก
+    </p>
+  </section>
 
-  <h2>Project Overview</h2>
-  <p>
-    Nongwaeng Salon is a mobile application designed
-    to help customers book salon appointments easily
-    without calling or waiting.
-  </p>
+  <!-- PROBLEM -->
+  <section class="projects">
+    <h2>ปัญหาที่พบ</h2>
+    <ul>
+      <li>การจองคิวผ่านแชทใช้เวลานาน</li>
+      <li>ผู้ใช้ไม่เห็นช่วงเวลาที่ว่างชัดเจน</li>
+      <li>การยืนยันการจองไม่สะดวก</li>
+    </ul>
+  </section>
 
-  <h2>Problem</h2>
-  <ul>
-    <li>Customers need to call to make appointments</li>
-    <li>Long waiting time</li>
-    <li>No clear schedule overview</li>
-  </ul>
+  <!-- GOAL -->
+  <section class="about">
+    <h2>เป้าหมายในการออกแบบ</h2>
+    <ul>
+      <li>ลดขั้นตอนการจองคิว</li>
+      <li>แสดงช่วงเวลาที่ว่างอย่างชัดเจน</li>
+      <li>เพิ่มความมั่นใจให้ผู้ใช้ก่อนยืนยันการจอง</li>
+    </ul>
+  </section>
 
-  <h2>Solution</h2>
-  <p>
-    Design a mobile booking system that allows users
-    to select services, stylists, and time slots easily.
-  </p>
+  <!-- USER PERSONA -->
+  <section class="projects">
+    <h2>User Persona</h2>
+    <p><strong>ชื่อ:</strong> เมย์ (อายุ 25 ปี)</p>
+    <p><strong>เป้าหมาย:</strong> จองคิวร้านทำผมได้อย่างรวดเร็ว</p>
+    <p><strong>ปัญหา:</strong> ระบบจองยุ่งยากและเสียเวลา</p>
+  </section>
 
-  <h2>User Persona</h2>
-  <p>
-    <strong>Name:</strong> Nook (26)<br>
-    <strong>Goal:</strong> Book a salon appointment quickly<br>
-    <strong>Pain Point:</strong> No time to call the salon
-  </p>
+  <!-- USER FLOW -->
+  <section class="about">
+    <h2>User Flow</h2>
+    <p>เลือกบริการ → เลือกช่าง → เลือกวันและเวลา → ยืนยันการจอง</p>
+  </section>
 
-  <h2>User Flow</h2>
-  <ol>
-    <li>Select service</li>
-    <li>Choose stylist</li>
-    <li>Select date & time</li>
-    <li>Confirm appointment</li>
-  </ol>
+  <!-- WIREFRAME -->
+  <section class="projects">
+    <h2>Wireframe</h2>
+    <p>
+      Wireframe ถูกออกแบบเพื่อเน้นการใช้งานบนมือถือ
+      และลดขั้นตอนที่ไม่จำเป็น
+    </p>
+    <img src="images/salon-wireframe.png" alt="Wireframe แอปจองคิวร้านทำผม" width="100%" />
+  </section>
 
-  <h2>UX Decisions</h2>
-  <ul>
-    <li>Show available time slots only</li>
-    <li>Use step-by-step booking flow</li>
-    <li>Clear confirmation screen</li>
-  </ul>
+  <!-- UI MOCKUP -->
+  <section class="about">
+    <h2>UI Mockup</h2>
+    <p>
+      ใช้โทนสีอ่อน ปุ่มขนาดใหญ่
+      เพื่อให้ใช้งานง่ายและเป็นมิตรกับผู้ใช้
+    </p>
+    <img src="images/salon-ui.png" alt="UI Mockup แอปจองคิวร้านทำผม" width="100%" />
+  </section>
 
-  <h2>UI Concept</h2>
-  <ul>
-    <li>Soft colors (friendly & relaxing)</li>
-    <li>Large buttons for mobile use</li>
-    <li>Readable typography</li>
-  </ul>
+  <!-- DESIGN DECISION -->
+  <section class="projects">
+    <h2>เหตุผลในการออกแบบ</h2>
+    <ul>
+      <li>ใช้ปุ่ม CTA ขนาดใหญ่เพื่อรองรับการใช้งานบนมือถือ</li>
+      <li>ออกแบบ Flow แบบ Step-by-step ลดความสับสน</li>
+    </ul>
+  </section>
+  
+  <!-- FIGMA PROTOTYPE -->
+    <section class="projects">
+    <h2>Figma Prototype</h2>
+    <p>
+        สามารถดู Prototype และ Flow การใช้งานของโปรเจคนี้ได้ผ่าน Figma
+        โดยลิงก์ด้านล่าง
+    </p>
+    <a href="https://www.figma.com/your-prototype-link"
+        class="btn"
+        target="_blank">
+        ดู Prototype บน Figma
+    </a>
+    </section>
 
-  <a href="index.html" class="btn">← Back to Home</a>
-</section>
+
+  <!-- REFLECTION -->
+  <section class="about">
+    <h2>สิ่งที่ได้เรียนรู้</h2>
+    <p>
+      โปรเจคนี้ช่วยพัฒนาทักษะด้าน Mobile UX
+      และการออกแบบระบบจองคิวที่มีประสิทธิภาพ
+    </p>
+  </section>
+
+  <!-- BACK -->
+  <section class="contact">
+    <a href="index.html" class="btn">กลับหน้า Portfolio</a>
+  </section>
 
 </body>
 </html>
